--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -25,6 +25,9 @@
     font-size: 20px;
     line-height: 24px;
 }
+.btn-typeLink{
+    padding: 0;
+}
 .btn-primary {
     background: var(--primary-color);
     color: white;
