--- a/src/components/getInTouchCard/getInTouchCard.module.css
+++ b/src/components/getInTouchCard/getInTouchCard.module.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    min-height: 100%;
 }
 .contactUs{
     margin-bottom: 32px;
