--- a/src/components/getInTouchCard/getInTouchCard.module.css
+++ b/src/components/getInTouchCard/getInTouchCard.module.css
@@ -6,6 +6,7 @@
     display: flex;
     justify-content: space-between;
     flex-direction: column;
+    min-height: 100%;
 }
 .contactUs{
     margin-bottom: 32px;
