--- a/src/components/typografy/typography.css
+++ b/src/components/typografy/typography.css
@@ -1,4 +1,7 @@
-/*размеры шрифта*/
+.typography{
+    font-style: normal;
+}
+/*FONT SIZE*/
 .size-xxs {
     font-weight: 400;
     font-size: 14px;
@@ -50,18 +53,17 @@
     line-height: 77px;
 }
 
-/*стиль шрифта*/
+/*FONT FAMILY*/
 .font-inter{
     font-family: 'Inter', serif;
-    font-style: normal;
 }
 
-/*цвет шрифта*/
+/*FONT COLOR*/
 .color-darkgray{
     color: #3A3D4B;
 }
 .color-darkblue{
-    color: #4A53F5;
+    color: var(--primary-color);
 }
 .color-white {
     color: #FFFFFF;
