--- a/src/components/footer/footerBlock.module.css
+++ b/src/components/footer/footerBlock.module.css
@@ -11,9 +11,13 @@
     display: flex;
     flex-direction: column;
 }
-.columnLogo{
-    max-width: 82px;
-    padding: 12px;
+.columnLogo {
+    padding-right: 24px;
+    font-style: normal;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 58px;
+    color: #FFFFFF;
 }
 .columnItem{
     font-style: normal;
