--- a/src/components/companyCard/companyCard.module.css
+++ b/src/components/companyCard/companyCard.module.css
@@ -1,9 +1,5 @@
-h2 {
-    margin: 0;
-}
 .companyCard {
-    max-width: 592px;
-    background: #f4f6f8;
+    background: var(--white-color);
     border-radius: 8px;
     padding: 24px;
     margin: 12px;
@@ -12,20 +8,17 @@ h2 {
     flex-direction: column;
 }
 .title {
-    font-style: normal;
     font-weight: 400;
     font-size: 24px;
-    line-height: 29px;
     margin-bottom: 20px;
-    color: #3a3d4b;
+    color: var(--secondary-gray-color);
 }
 .subTitle {
-    font-style: normal;
     font-weight: 400;
     font-size: 16px;
-    line-height: 140%;
+    line-height: 16px;
     margin-bottom: 32px;
-    color: #3a3d4b;
+    color: var(--secondary-gray-color);
     flex: 1 1 auto;
 }
 .wrapper {
@@ -34,10 +27,9 @@ h2 {
     align-items: center;
 }
 .address {
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16px;
     color: #898989;
     padding-right: 8px;
 }
@@ -47,10 +39,9 @@ h2 {
     align-items: center;
 }
 .text {
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16px;
     color: #4a53f5;
     padding-right: 16px;
 }
