--- a/src/components/typografy/typography.css
+++ b/src/components/typografy/typography.css
@@ -1,11 +1,8 @@
-.typography{
-    font-style: normal;
-}
 /*FONT SIZE*/
 .size-xxs {
     font-weight: 400;
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16px;
 }
 .size-xs {
     font-weight: 400;
@@ -25,7 +22,7 @@
 .size-xm{
     font-weight: 400;
     font-size: 24px;
-    line-height: 29px;
+    line-height: 28px;
 }
 .size-m{
     font-weight: 500;
@@ -60,7 +57,7 @@
 
 /*FONT COLOR*/
 .color-darkgray{
-    color: #3A3D4B;
+    color: var(--secondary-gray-color);
 }
 .color-darkblue{
     color: var(--primary-color);
