--- a/src/components/footer/footerBlock.module.css
+++ b/src/components/footer/footerBlock.module.css
@@ -1,8 +1,5 @@
-a {
-    cursor: pointer;
-}
 .wrapper {
-    background-color: #2d2d2d;
+    background-color: var(--secondary-background);
 }
 .container{
     padding: 12px;
@@ -16,18 +13,13 @@ a {
 }
 .columnLogo {
     padding-right: 24px;
-    font-style: normal;
     font-weight: 800;
     font-size: 48px;
     line-height: 58px;
-    color: #FFFFFF;
+    color: var(--primary-background);
 }
 .columnItem{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #FFFFFF;
+    color: var(--primary-background);
     text-decoration: none;
     padding: 12px;
 }
@@ -37,16 +29,21 @@ a {
     align-items: center;
 }
 .linksItem{
-    margin: 2px;
+    margin: 4px;
 }
 .bottomItem{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    color: #FFFFFF;
+    color: var(--primary-background);
     opacity: 0.5;
     text-decoration: none;
     padding: 12px;
     display: inline-block;
+}
+
+@media screen and (max-width: 900px){
+    .container{
+        padding: 8px;
+        display: grid;
+        grid-template-columns: 50% 50%;
+        margin-bottom: 24px;
+    }
 }
