--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -6,6 +6,7 @@
     --secondary-btn-hover-color: #d8ddf9;
 
     --primary-background: #FFFFFF;
+    --secondary-background: #2d2d2d;
     --primary-border: #F0F0F0;
 
     --primary-text-color: #3A3D4B;
@@ -14,4 +15,8 @@
 
     font-size: 16px;
     line-height: 20px;
+    font-weight: 400;
+}
+a {
+    cursor: pointer;
 }
