--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -13,6 +13,9 @@
     --secondary-text-color: #898989;
     --details-text-color:  #000000;
 
+    --primary-chip-background: #52AE52;
+    --secondary-chip-background: #E99D45;
+
     font-size: 16px;
     line-height: 20px;
     font-weight: 400;
