--- a/src/components/benefitsCard/benefitsCard.module.css
+++ b/src/components/benefitsCard/benefitsCard.module.css
@@ -1,5 +1,5 @@
 .wrapper {
-    background: #F4F6F8;
+    background: var(--third-background);
     border-radius: 8px;
     border: none;
     padding: 16px;
