--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -7,6 +7,7 @@
 
     --primary-background: #FFFFFF;
     --secondary-background: #2d2d2d;
+    --third-background: #F4F6F8;
     --primary-border: #F0F0F0;
 
     --primary-text-color: #3A3D4B;
