--- a/src/components/groceryCard/groceryCard.module.css
+++ b/src/components/groceryCard/groceryCard.module.css
@@ -32,11 +32,12 @@
     font-size: 14px;
     line-height: 16px;
     color: var(--secondary-text-color);
+
 }
 .detailsSubTitle {
     font-size: 14px;
     line-height: 16px;
-    color: var(--details-text-color);
+    color: var(--primary-text-color);
 }
 .text {
     display: flex;
