--- a/src/components/benefitsCard/benefitsCard.module.css
+++ b/src/components/benefitsCard/benefitsCard.module.css
@@ -10,17 +10,12 @@
     margin-bottom: 16px;
 }
 .title {
-    font-style: normal;
     font-weight: 500;
     font-size: 20px;
     line-height: 24px;
     margin-bottom: 16px;
-    color: #3A3D4B;
+    color: var(--primary-text-color);
 }
 .subTitle {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    color: #3A3D4B;
+    color: var(--primary-text-color);
 }
