--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -10,23 +10,14 @@
     flex-direction: row;
     align-items: center;
 }
-.mapImg {
-    max-width: 12px;
-    margin-right: 4px;
-}
 .city {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-
-    color: #4A53F5;
+    margin-left: 4px;
+    color: var(--primary-btn-color);
 }
 .pic {
     padding-right: 24px;
-    font-style: normal;
     font-weight: 800;
     font-size: 48px;
     line-height: 58px;
-    color: #3A3D4B;
+    color: var(--primary-text-color);
 }
