change font size, color

--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -12,6 +12,7 @@
 
     --primary-text-color: #3A3D4B;
     --secondary-text-color: #898989;
+    --third-text-color: #EC5B55;
 
     --primary-chip-background: #52AE52;
     --secondary-chip-background: #E99D45;
