--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -1,23 +1,27 @@
 .wrapper {
-    display: grid;
-    grid-template-columns: 30% 70%;
+  display: grid;
+  grid-template-columns: 30% 70%;
 }
-.logoMap{
-    display: flex;
+
+.logo-map {
+  display: flex;
 }
-.map{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+
+.map {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
+
 .city {
-    margin-left: 4px;
-    color: var(--primary-btn-color);
+  margin-left: 4px;
+  color: var(--primary-btn-color);
 }
+
 .pic {
-    padding-right: 24px;
-    font-weight: 800;
-    font-size: 48px;
-    line-height: 58px;
-    color: var(--primary-text-color);
+  padding-right: 24px;
+  font-size: 48px;
+  font-weight: 800;
+  line-height: 58px;
+  color: var(--primary-text-color);
 }
