--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -1,66 +1,74 @@
 .btn {
-    cursor: pointer;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    border-radius: 8px;
-    border: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
 }
+
 .btn-s {
-    padding: 8px 16px;
-    font-weight: 400;
-    font-size: 12px;
-    line-height: 16px;
+  padding: 8px 16px;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 16px;
 }
+
 .btn-m {
-    padding: 16px 20px;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 20px;
+  padding: 16px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
 }
+
 .btn-l {
-    padding: 20px 24px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+  padding: 20px 24px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
 }
-.btn-typeLink{
-    padding: 0;
-}
+
 .btn-primary {
-    background: var(--primary-btn-color);
-    color: var(--primary-background);
+  color: var(--primary-background);
+  background: var(--primary-btn-color);
 }
 
-.btn-primary:hover{
-    background: var(--primary-btn-hover-color);
+.btn-primary:hover {
+  background: var(--primary-btn-hover-color);
 }
+
 .btn-secondary {
-    background: var(--secondary-btn-color);
-    color: #4A53F5;
-}
-.btn-secondary:hover{
-    background: var(--secondary-btn-hover-color);
-}
-.btn-pseudo {
-    background: transparent;
-    color: #3A3D4B;
-}
-.btn-pseudo:hover {
-    background: var(--pseudo-btn-hover-color);
-}
-.btn-typeLink {
-    text-decoration-line: underline;
-    color: var(--primary-btn-color);
-    background-color: transparent;
-}
-.btn-typeLink:hover{
-    color: var(--primary-btn-hover-color);
-}
-.btn-disabled,
-.btn-disabled:hover  {
-    background-color: var(--secondary-text-color);
-    cursor: auto;
+  color: #4a53f5;
+  background: var(--secondary-btn-color);
 }
 
+.btn-secondary:hover {
+  background: var(--secondary-btn-hover-color);
+}
+
+.btn-pseudo {
+  color: #3a3d4b;
+  background: transparent;
+}
+
+.btn-pseudo:hover {
+  background: var(--pseudo-btn-hover-color);
+}
+
+.btn-type-link {
+  padding: 0;
+  color: var(--primary-btn-color);
+  text-decoration-line: underline;
+  background-color: transparent;
+
+  &:hover {
+    color: var(--primary-btn-hover-color);
+  }
+}
+
+.btn-disabled,
+.btn-disabled:hover {
+  cursor: auto;
+  background-color: var(--secondary-text-color);
+}
