--- a/src/components/companyCard/companyCard.module.css
+++ b/src/components/companyCard/companyCard.module.css
@@ -1,47 +1,52 @@
-.companyCard {
-    background: var(--third-background);
-    border-radius: 8px;
-    padding: 24px;
-    margin: 12px;
+.company-card {
+  display: flex;
+  flex-direction: column;
+  padding: 24px;
+  margin: 12px;
+  background: var(--third-background);
+  border-radius: 8px;
+}
 
-    display: flex;
-    flex-direction: column;
-}
 .title {
-    font-weight: 400;
-    font-size: 24px;
-    margin-bottom: 20px;
-    color: var(--primary-text-color);
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: 400;
+  color: var(--primary-text-color);
 }
-.subTitle {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 16px;
-    margin-bottom: 32px;
-    color: var(--primary-text-color);
-    flex: 1 1 auto;
+
+.sub-title {
+  flex: 1 1 auto;
+  margin-bottom: 32px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+  color: var(--primary-text-color);
 }
+
 .wrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .address {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: #898989;
-    padding-right: 8px;
+  padding-right: 8px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #898989;
 }
+
 .offers {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
-    color: #4a53f5;
-    padding-right: 16px;
+  padding-right: 16px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
+  color: #4a53f5;
 }
