--- a/src/components/typografy/typography.css
+++ b/src/components/typografy/typography.css
@@ -1,76 +1,90 @@
-/*FONT SIZE*/
+/* FONT SIZE */
 .size-xxs {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 16px;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 16px;
 }
+
 .size-xs {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
 }
-.size-s{
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 22px;
+
+.size-s {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 22px;
 }
+
 .size-xxm {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 24px;
 }
-.size-xm{
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 28px;
+
+.size-xm {
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 28px;
 }
-.size-m{
-    font-weight: 500;
-    font-size: 26px;
-    line-height: 31px;
+
+.size-m {
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 31px;
 }
+
 .size-l {
-    font-weight: 500;
-    font-size: 32px;
-    line-height: 39px;
+  font-size: 32px;
+  font-weight: 500;
+  line-height: 39px;
 }
-.size-xl{
-    font-weight: 500;
-    font-size: 36px;
-    line-height: 120%;
+
+.size-xl {
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 120%;
 }
+
 .size-xxl {
-    font-weight: 500;
-    font-size: 40px;
-    line-height: 100%;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 100%;
 }
+
 .size-xxxl {
-    font-weight: 500;
-    font-size: 64px;
-    line-height: 77px;
+  font-size: 64px;
+  font-weight: 500;
+  line-height: 77px;
 }
 
-/*FONT FAMILY*/
-.font-inter{
-    font-family: 'Inter', serif;
+/* FONT FAMILY */
+.font-inter {
+  font-family: Inter, serif;
 }
 
-/*FONT COLOR*/
-.color-darkgray{
-    color: var(--secondary-gray-color);
+/* FONT COLOR */
+.color-darkgray {
+  color: var(--secondary-gray-color);
 }
-.color-darkblue{
-    color: var(--primary-color);
+
+.color-darkblue {
+  color: var(--primary-color);
 }
+
 .color-white {
-    color: #FFFFFF;
+  color: #fff;
 }
-.color-gray{
-    color: #898989;
+
+.color-gray {
+  color: #898989;
 }
-.color-lightgray{
-    color: #B7B7B7;
+
+.color-lightgray {
+  color: #b7b7b7;
 }
-.color-coral{
-    color: #EC5B55;
+
+.color-coral {
+  color: #ec5b55;
 }
