--- a/src/components/companyCards/companyCards.module.css
+++ b/src/components/companyCards/companyCards.module.css
@@ -7,3 +7,10 @@
   display: flex;
   align-items: stretch;
 }
+
+@media screen and (max-width: 600px) {
+  .cards {
+    grid-template-columns: 100%;
+    gap: 24px;
+  }
+}
