start CompaniesPage, fix styles

--- a/src/components/benefitsCards/benefitsCards.module.css
+++ b/src/components/benefitsCards/benefitsCards.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 33% 33% 33%;
   padding: 20px;
+  margin: 0 72px;
 }
 
 @media screen and (max-width: 600px) {
