--- a/src/components/companyCard/companyCard.module.css
+++ b/src/components/companyCard/companyCard.module.css
@@ -1,8 +1,8 @@
 .company-card {
   display: flex;
   flex-direction: column;
+  width: 100%;
   padding: 24px;
-  margin: 12px;
   background: var(--third-background);
   border-radius: 8px;
 }
