--- a/src/components/companyCards/companyCards.module.css
+++ b/src/components/companyCards/companyCards.module.css
@@ -1,6 +1,8 @@
 .cards {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 48% 48%;
+  gap: 32px;
+  margin: 0 72px;
 }
 
 .card {
@@ -8,7 +10,7 @@
   align-items: stretch;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 700px) {
   .cards {
     grid-template-columns: 100%;
     gap: 24px;
