--- a/src/components/navigation/navigationMenu.module.css
+++ b/src/components/navigation/navigationMenu.module.css
@@ -1,3 +1,11 @@
 .wrapper {
   display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 900px) {
+  .wrapper {
+    display: grid;
+    grid-template-columns: 50% 50%;
+  }
 }
