--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -23,3 +23,10 @@
 a {
   cursor: pointer;
 }
+
+.app {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
