--- a/src/components/header/headerBlock.module.css
+++ b/src/components/header/headerBlock.module.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 30% 70%;
   padding: 8px 0;
-  margin: 0 72px;
+  margin: var(--primary-margin);
 }
 
 .logo-map {
