--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -14,6 +14,7 @@
   --secondary-chip-background: #e99d45;
   --secondary-gray-color: #000;
   --primary-color: #000;
+  --primary-margin: 0 72px;
 
   font-size: 16px;
   font-weight: 400;
