--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -15,6 +15,9 @@
   --secondary-gray-color: #000;
   --primary-color: #000;
   --primary-margin: 0 72px;
+  --breakpoint1: 1050px;
+  --breakpoint2: 900px;
+  --breakpoint3: 600px;
 
   font-size: 16px;
   font-weight: 400;
