--- a/src/pages/companiesPage/companiesPage.module.css
+++ b/src/pages/companiesPage/companiesPage.module.css
@@ -10,7 +10,7 @@
   color: var(--primary-text-color);
 }
 
-.btn {
+.btn-container {
   display: flex;
   justify-content: center;
   margin: 56px 0 120px;
