--- a/src/styles/globalStyle.module.css
+++ b/src/styles/globalStyle.module.css
@@ -18,6 +18,7 @@
   --breakpoint1: 1050px;
   --breakpoint2: 900px;
   --breakpoint3: 600px;
+  --third-text-color: #ec5b55;
 
   font-size: 16px;
   font-weight: 400;
