--- a/src/pages/homePage/homePage.module.css
+++ b/src/pages/homePage/homePage.module.css
@@ -1,3 +1,35 @@
 .container {
   margin: var(--primary-margin);
 }
+
+.header {
+  padding: 20px 0;
+}
+
+.title {
+  margin-bottom: 22px;
+  font-size: 64px;
+  font-weight: 500;
+  line-height: 78px;
+  color: var(--primary-text-color);
+}
+
+.sub-title {
+  display: grid;
+  grid-template-columns: 36%;
+  font-size: 20px;
+  line-height: 24px;
+}
+
+@media screen and (max-width: 900px) {
+  .title {
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  .sub-title {
+    grid-template-columns: 100%;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
