--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -3,6 +3,8 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  height: 100%;
   cursor: pointer;
   border: none;
   border-radius: 8px;
@@ -18,7 +20,7 @@
 .btn-m {
   padding: 16px 20px;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
   line-height: 20px;
 }
 
