--- a/src/components/navigation/navigationMenu.module.css
+++ b/src/components/navigation/navigationMenu.module.css
@@ -1,6 +1,11 @@
 .wrapper {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+}
+
+.item-link {
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 900px) {
