--- a/src/components/offerCard/offerCard.module.css
+++ b/src/components/offerCard/offerCard.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 100%;
   padding: 16px;
   border: 1px solid var(--primary-border);
   border-radius: 8px;
