--- a/src/components/groceryCard/groceryCard.module.css
+++ b/src/components/groceryCard/groceryCard.module.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 60% 40%;
   padding: 20px;
+  margin: 16px 0;
   background: var(--primary-background);
   border: 1px solid var(--primary-border);
   border-radius: 8px;
