add quantities into companies page

--- a/src/pages/companiesPage/companiesPage.module.css
+++ b/src/pages/companiesPage/companiesPage.module.css
@@ -2,16 +2,40 @@
   margin: var(--primary-margin);
 }
 
-.header {
+.header-wrapper {
+  display: flex;
   margin: 56px 0;
+}
+
+.header {
+  padding: 12px 0;
   font-size: 64px;
   font-weight: 500;
   line-height: 78px;
   color: var(--primary-text-color);
 }
 
+.quantities {
+  font-size: 36px;
+  line-height: 44px;
+  color: var(--primary-btn-color);
+}
+
 .btn-container {
-  display: flex;
+  display: grid;
+  grid-template-columns: 32%;
   justify-content: center;
   margin: 56px 0 120px;
+}
+
+.btn-content-wrapper {
+  display: flex;
+}
+
+.btn-quantities {
+  padding-bottom: 12px;
+}
+
+.btn-text {
+  padding: 4px;
 }
