--- a/src/pages/companiesPage/companiesPage.module.css
+++ b/src/pages/companiesPage/companiesPage.module.css
@@ -39,3 +39,12 @@
 .btn-text {
   padding: 4px;
 }
+
+.input {
+  display: grid;
+  grid-template-columns: 8% 92%;
+  padding: 16px;
+  margin: 32px 0;
+  border: 1px solid var(--primary-border);
+  border-radius: 8px;
+}
