add color into btn-disabled

--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -71,6 +71,7 @@
 
 .btn-disabled,
 .btn-disabled:hover {
+  color: var(--primary-text-color);
   cursor: auto;
   background-color: var(--secondary-text-color);
 }
