--- a/src/components/questionCards/questionCards.module.css
+++ b/src/components/questionCards/questionCards.module.css
@@ -1,8 +1,24 @@
 .wrapper {
+  margin: 20px 0;
+}
+
+.question {
   display: grid;
   grid-template-columns: calc((100% - 64px)/3) calc((100% - 64px)/3) calc((100% - 64px)/3);
   gap: 32px;
   margin: 16px 0;
+}
+
+.title {
+  margin: 32px 0;
+  font-size: 36px;
+  font-weight: 500;
+  line-height: 44px;
+  color: var(--primary-text-color);
+}
+
+.question-btn {
+  display: inline-block;
 }
 
 @media screen and (max-width: 900px) {
