--- a/src/components/groceryCard/groceryCard.module.css
+++ b/src/components/groceryCard/groceryCard.module.css
@@ -1,10 +1,12 @@
+@import "@/styles/variables.modules.css";
+
 .grocery {
   display: grid;
   grid-template-columns: 60% 40%;
   padding: 20px;
   margin: 16px 0;
-  background: var(--primary-background);
-  border: 1px solid var(--primary-border);
+  background: $primary-background;
+  border: 1px solid $primary-border;
   border-radius: 8px;
 }
 
@@ -26,25 +28,25 @@
 }
 
 .description-title {
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 .description-sub-title {
   font-size: 18px;
   line-height: 22px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .details-title {
   font-size: 14px;
   line-height: 16px;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 .details-sub-title {
   font-size: 14px;
   line-height: 16px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .text {
