--- a/src/components/benefitsCards/benefitsCards.module.css
+++ b/src/components/benefitsCards/benefitsCards.module.css
@@ -1,10 +1,12 @@
+@import "@/styles/variables.modules.css";
+
 .wrapper {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   padding: 20px;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: $breakpoint2) {
   .wrapper {
     grid-template-columns: 100%;
     gap: 24px;
