--- a/src/components/companyCards/companyCards.module.css
+++ b/src/components/companyCards/companyCards.module.css
@@ -1,3 +1,5 @@
+@import "@/styles/variables.modules.css";
+
 .cards {
   display: grid;
   grid-template-columns: 48% 48%;
@@ -9,7 +11,7 @@
   align-items: stretch;
 }
 
-@media screen and (max-width: 1050px) {
+@media screen and (max-width: $breakpoint1) {
   .cards {
     grid-template-columns: 100%;
     gap: 24px;
