--- a/src/components/footer/footerBlock.module.css
+++ b/src/components/footer/footerBlock.module.css
@@ -1,9 +1,11 @@
+@import "@/styles/variables.modules.css";
+
 .footer {
-  background-color: var(--secondary-background);
+  background-color: $secondary-background;
 }
 
 .wrapper {
-  margin: var(--primary-margin);
+  margin: $primary-margin;
 }
 
 .container {
@@ -22,12 +24,12 @@
   font-size: 48px;
   font-weight: 800;
   line-height: 58px;
-  color: var(--primary-background);
+  color: $primary-background;
 }
 
 .column-item {
   padding: 12px;
-  color: var(--primary-background);
+  color: $primary-background;
   text-decoration: none;
 }
 
@@ -48,12 +50,12 @@
 .bottom-item {
   display: inline-block;
   padding: 12px 24px 12px 0;
-  color: var(--primary-background);
+  color: $primary-background;
   text-decoration: none;
   opacity: 0.5;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: $breakpoint2) {
   .container {
     display: grid;
     grid-template-columns: 50% 50%;
