--- a/src/components/navigation/navigationMenu.module.css
+++ b/src/components/navigation/navigationMenu.module.css
@@ -1,3 +1,5 @@
+@import "@/styles/variables.modules.css";
+
 .wrapper {
   display: flex;
   align-items: center;
@@ -8,7 +10,7 @@
   height: 100%;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: $breakpoint2) {
   .wrapper {
     display: grid;
     grid-template-columns: 50% 50%;
