--- a/src/components/offerCard/offerCard.module.css
+++ b/src/components/offerCard/offerCard.module.css
@@ -1,3 +1,5 @@
+@import "@/styles/variables.modules.css";
+
 .offer-card {
   box-sizing: border-box;
   display: flex;
@@ -5,15 +7,15 @@
   align-items: flex-start;
   height: 100%;
   padding: 16px;
-  border: 1px solid var(--primary-border);
+  border: 1px solid $primary-border;
   border-radius: 8px;
 }
 
 .title {
   margin-bottom: 8px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .sub-title {
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
