--- a/src/pages/companiesPage/companiesPage.module.css
+++ b/src/pages/companiesPage/companiesPage.module.css
@@ -1,5 +1,7 @@
+@import "@/styles/variables.modules.css";
+
 .container {
-  margin: var(--primary-margin);
+  margin: $primary-margin;
 }
 
 .header {
@@ -7,7 +9,7 @@
   font-size: 64px;
   font-weight: 500;
   line-height: 78px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .btn-container {
