--- a/src/components/dragAndDrop/dragAndDrop.module.css
+++ b/src/components/dragAndDrop/dragAndDrop.module.css
@@ -19,3 +19,24 @@
   line-height: 16px;
   color: var(--secondary-text-color);
 }
+
+.file-input {
+  display: none;
+}
+
+.load-btn {
+  justify-content: flex-start;
+}
+
+.drop-description {
+  display: grid;
+  grid-template-columns: 80%;
+  justify-content: center;
+}
+
+.highlight {
+  padding: 60px;
+  background-color: var(--third-background);
+  border: 4px dashed var(--primary-btn-color);
+  border-radius: 4px;
+}
