--- a/src/components/bulkOrderForm/bulkOrderForm.module.css
+++ b/src/components/bulkOrderForm/bulkOrderForm.module.css
@@ -1,3 +1,5 @@
+@import "@/styles/variables.modules.css";
+
 .wrapper {
   display: grid;
   grid-template-columns: 60%;
@@ -9,7 +11,7 @@
   font-size: 36px;
   font-weight: 500;
   line-height: 44px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .sub-title {
@@ -20,7 +22,7 @@
 .text-input {
   padding: 16px;
   margin: 8px 0;
-  border: 1px solid var(--primary-border);
+  border: 1px solid $primary-border;
   border-radius: 8px;
 }
 
@@ -32,14 +34,14 @@
 
 .drop-zone {
   padding: 60px;
-  border: 2px dashed var(--primary-border);
+  border: 2px dashed $primary-border;
   border-radius: 4px;
 }
 
 .instruction {
   font-size: 14px;
   line-height: 16px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .drop-text {
@@ -49,7 +51,7 @@
 .supported-formats {
   font-size: 14px;
   line-height: 16px;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 .checkbox-wrapper {
@@ -60,7 +62,7 @@
   margin: 20px 0;
   font-size: 14px;
   line-height: 16px;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 .checkbox {
