--- a/src/components/questionCard/questionCard.module.css
+++ b/src/components/questionCard/questionCard.module.css
@@ -1,3 +1,5 @@
+@import "@/styles/variables.modules.css";
+
 .wrapper {
   display: grid;
   grid-template-columns: calc((100% - 8px) * 0.88) calc((100% - 8px) * 0.12);
@@ -6,6 +8,6 @@
   justify-content: space-between;
   height: 100%;
   padding: 32px;
-  background: var(--third-background);
+  background: $third-background;
   border-radius: 8px;
 }
