--- a/src/components/searchInput/searchInput.module.css
+++ b/src/components/searchInput/searchInput.module.css
@@ -1,18 +1,24 @@
 @import "/src/styles/variables.modules.css";
 
-.input {
-  display: grid;
-  grid-template-columns: 8% 92%;
+.fill-search-query {
+  display: flex;
   margin: 32px 0;
   border: 1px solid $primary-border;
   border-radius: 8px;
 }
 
 .empty-search-query {
-  display: grid;
-  grid-template-columns: 8% 92%;
-  padding: 16px;
+  display: flex;
   margin: 32px 0;
-  border: 2px solid $third-text-color;
+  border: 1px solid $third-text-color;
   border-radius: 8px;
+}
+
+.search-btn-wrapper {
+  display: inline-block;
+}
+
+.input {
+  width: 100%;
+  padding-left: 8px;
 }
