--- a/src/pages/productsPage/components/filters/filters.module.css
+++ b/src/pages/productsPage/components/filters/filters.module.css
@@ -1,8 +1,7 @@
 .filters {
   display: grid;
-  grid-template-columns: 32% 32%;
+  grid-template-columns: repeat(3, minmax(260px, 1fr));
   align-items: center;
-  justify-content: space-between;
 }
 
 .wrapper {
