--- a/src/components/UI/inputs/select.module.css
+++ b/src/components/UI/inputs/select.module.css
@@ -1,12 +1,14 @@
+@import "/src/styles/variables.modules.css";
+
 .select {
   padding: 16px;
-  border: 1px solid var(--primary-border);
+  border: 1px solid $primary-border;
   border-radius: 8px;
 }
 
 .option {
   padding: 4px;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
 }
 
 .selected {
@@ -17,7 +19,7 @@
   display: flex;
   justify-content: space-between;
   padding: 0;
-  color: var(--secondary-text-color);
-  border: 1px solid var(--primary-border);
+  color: $secondary-text-color;
+  border: 1px solid $primary-border;
   border-radius: 8px;
 }
