BEAR-22 replace breakpoint names

--- a/src/components/footer/footerBlock.module.css
+++ b/src/components/footer/footerBlock.module.css
@@ -55,7 +55,7 @@
   opacity: 0.5;
 }
 
-@media screen and (max-width: $breakpoint2) {
+@media screen and (max-width: $breakpointLarge) {
   .container {
     display: grid;
     grid-template-columns: 50% 50%;
