--- a/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
+++ b/src/pages/homePage/components/benefitsCards/benefitsCards.module.css
@@ -14,7 +14,7 @@
   color: $primary-text-color;
 }
 
-@media screen and (max-width: $breakpoint2) {
+@media screen and (max-width: $breakpointLarge) {
   .wrapper {
     grid-template-columns: 100%;
     gap: 24px;
