--- a/src/pages/homePage/homePage.module.css
+++ b/src/pages/homePage/homePage.module.css
@@ -23,7 +23,7 @@
   line-height: 24px;
 }
 
-@media screen and (max-width: $breakpoint2) {
+@media screen and (max-width: $breakpointLarge) {
   .title {
     font-size: 40px;
     line-height: 40px;
