--- a/src/pages/productsPage/components/offerCards/offerCards.module.css
+++ b/src/pages/productsPage/components/offerCards/offerCards.module.css
@@ -19,7 +19,7 @@
   color: $primary-text-color;
 }
 
-@media screen and (max-width: $breakpoint2) {
+@media screen and (max-width: $breakpointLarge) {
   .cards {
     grid-template-columns: 50% 50%;
   }
