--- a/src/components/dragAndDrop/dragAndDrop.module.css
+++ b/src/components/dragAndDrop/dragAndDrop.module.css
@@ -1,13 +1,19 @@
+@import "/src/styles/variables.modules.css";
+
 .drop-zone {
   padding: 60px;
-  border: 2px dashed var(--primary-border);
+  border: 2px dashed $primary-border;
   border-radius: 4px;
+}
+
+.drop-zone:hover {
+  background-color: $third-background;
 }
 
 .instruction {
   font-size: 14px;
   line-height: 16px;
-  color: var(--primary-text-color);
+  color: $primary-text-color;
 }
 
 .drop-text {
@@ -17,7 +23,13 @@
 .supported-formats {
   font-size: 14px;
   line-height: 16px;
-  color: var(--secondary-text-color);
+  color: $secondary-text-color;
+}
+
+.uploaded-complete {
+  font-size: 14px;
+  line-height: 16px;
+  color: $primary-text-color;
 }
 
 .file-input {
@@ -36,8 +48,8 @@
 
 .highlight {
   padding: 60px;
-  background-color: var(--third-background);
-  border: 4px dashed var(--primary-btn-color);
+  background-color: $third-background;
+  border: 4px dashed $primary-btn-color;
   border-radius: 4px;
 }
 
