--- a/src/pages/homePage/components/questionCards/questionCards.module.css
+++ b/src/pages/homePage/components/questionCards/questionCards.module.css
@@ -1,7 +1,7 @@
 @import "/src/styles/variables.modules.css";
 
 .wrapper {
-  margin: 20px 0;
+  padding: $primary-padding-top-bottom;
 }
 
 .question {
