--- a/src/styles/variables.modules.css
+++ b/src/styles/variables.modules.css
@@ -20,6 +20,7 @@ $secondary-chip-background: #e99d45;
 $primary-color: #000;
 
 $primary-margin: 0 72px;
+$primary-padding-top-bottom: 40px 0;
 
 $breakpointSmall: 600px;
 $breakpointLarge: 900px;
