--- a/src/pages/homePage/components/mainSearchInputs/mainSearchInputs.module.css
+++ b/src/pages/homePage/components/mainSearchInputs/mainSearchInputs.module.css
@@ -6,15 +6,21 @@
   color: $primary-text-color;
 }
 
-.form {
+.wrapper {
   display: grid;
-  grid-template-columns: 4fr 4fr 1fr 3fr;
+  grid-template-columns: 4fr 1fr 4fr 1fr 3fr;
   gap: 8px;
   padding: 8px;
   margin: 12px 0;
   background: $primary-background;
   border: 1px solid $primary-border;
   border-radius: 8px;
+}
+
+.img-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .input {
