add marking hint

--- a/src/styles/variables.modules.css
+++ b/src/styles/variables.modules.css
@@ -7,6 +7,7 @@ $secondary-btn-hover-color: #d8ddf9;
 $primary-background: #fff;
 $secondary-background: #2d2d2d;
 $third-background: #f4f6f8;
+$hint-background: #e2e5f3;
 
 $primary-border: #f0f0f0;
 
